--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-material-ui-carousel": "^3.3.3",
+    "react-paypal-button-v2": "^2.6.3",
     "react-query": "^3.39.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
